...
                                </constraints>
                                <items>
                                    <barButtonItem title="Back" id="Ojb-z7-xHS">
                                        <connections>
                                            <action selector="back:" destination="BqM-Tn-mLp" id="3Ok-xL-DCU"/>
...
                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                <items>
                                    <barButtonItem title="Cancel" id="Dhi-r4-XV8">
                                        <connections>
                                            <action selector="cancel:" destination="U77-E8-2bO" id="GBw-Op-UFT"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Following" id="h3t-ec-Qdy" userLabel="Following"/>
                    <connections>
                        <outlet property="tableView" destination="HA8-cQ-Qgf" id="2FF-fv-seU"/>
...
                                                    <constraint firstAttribute="height" constant="30" id="6W5-9S-sbZ"/>
                                                </constraints>
                                                <state key="normal" title="Log Out"/>
                                                <connections>
                                                    <action selector="logoutAction" destination="gkR-c7-oYd" eventType="touchUpInside" id="b62-mo-Ptc"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Me" id="771-I6-0my" userLabel="Me"/>
                    <connections>
                        <outlet property="logout" destination="dmz-1q-4kd" id="hkv-Z4-MS2"/>
...
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="sUp-mP-PVT"/>
                                    <barButtonItem title="Post" id="29l-Rt-RDu">
                                        <connections>
                                            <action selector="post:" destination="MsQ-y1-gys" id="AL8-HV-qi5"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m3h-uu-KNd">
                                <rect key="frame" x="44" y="285" width="402" height="30"/>
                                <state key="normal" title="Sign Up"/>
                                <connections>
                                    <action selector="signUp:" destination="TBY-oH-Jxb" eventType="touchUpInside" id="ZKD-vN-lul"/>
...
                                <rect key="frame" x="121" y="443" width="65" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="New user"/>
                                <connections>
                                    <segue destination="TBY-oH-Jxb" kind="showDetail" action="showViewController:sender:" id="bnu-Uo-Jcd"/>
...
